tests/fail/ip4.rs
use const_addrs::ip4;

fn main() {
    let _ = ip4!("192.168.11");
}
